@@ -28,5 +28,7 @@ Depends:
  python-bottle,
  ifmap-python-client,
  contrail-config-openstack,
- keepalived (=1:1.2.13-1~bpo70+1) | keepalived (=1.2.13-0~276~ubuntu14.04.1)
+ keepalived (=1:1.2.13-1~bpo70+1) | keepalived (=1.2.13-0~276~ubuntu14.04.1),
+ zookeeper
+Replaces: contrail-database-common
 Description: Contrail Openstack Config composite debian package
